# pebolmaxbackend

./: .env  Cargo.toml  Dockerfile  docker-compose.yml  start.sh
artefatos/: all_requirements.md  db.txt  endpoints_detailed.yaml  get_figma.py  newdb.txt  openapi.yaml  requisitos.md  screens.yaml
artefatos/figma_yaml/: booking_header_2_773.yaml
artefatos/prompts/: openapi.md
migrations/: 20250324200245_create_users_credentials.down.sql  20250324200245_create_users_credentials.up.sql  20250329040057_roles.down.sql  20250329040057_roles.up.sql  20250330164222_arenas_data.down.sql  20250330164222_arenas_data.up.sql  20250331014827_payments.down.sql  20250331014827_payments.up.sql  20250331014827_rent.down.sql  20250331014827_rent.up.sql  20250331203029_payments.up.sql  20250331203029_rent.up.sql
scripts/: migrate_up.sh  restart_db.sh
src/: handler.rs  main.rs  middleware.rs  model.rs  route.rs
src/controller/: note_controller.rs
src/errors/: default_errors.rs  mod.rs
src/modules/: mod.rs
src/modules/arenas/: arenas_controller.rs  arenas_model.rs  arenas_repository.rs  arenas_service.rs  mod.rs
src/modules/arenas/estabelecimento/: controller.rs  mod.rs  repository.rs  service.rs
src/modules/arenas/horario/: controller.rs  (+2 more)
src/modules/auth/: auth_controller.rs  auth_model.rs  auth_repository.rs  auth_service.rs  mod.rs
src/modules/notes/: note_service.rs
src/modules/payments/: mod.rs  payment_controller.rs  payment_model.rs  payment_repository.rs  payment_service.rs
src/modules/rent/: mod.rs  rent_controller.rs  rent_model.rs  rent_repository.rs  rent_service.rs
src/modules/service/: mod.rs  service_model.rs  service_repository.rs  service_service.rs
(+14 files in other folders)
