[package]
name = "rust-axum-postgres-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.3", features = ["macros"] }
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = [
  "with-uuid-1",
  "with-chrono-0_4",
] }
tower-http = { version = "0.5.0", features = ["cors"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
deadpool-postgres = "0.12.1"
jsonwebtoken = "9.2.0"
reqwest = { version = "0.12.15", features = ["json"] }
